2009-12-31 [paul]	3.7.3cvs49

	* manual/claws-mail-manual.xml
	* manual/intro.xml
	* manual/plugins.xml
		fix links so that they make sense in the context of the
		text version of the manual

2009-12-31 [paul]	3.7.3cvs48

	* manual/intro.xml
	* manual/plugins.xml
		updates, improvements, corrections, additions

2009-12-29 [pawel]	3.7.3cvs47

	* src/prefs_filtering_action.c
		Fix Bug 2082 'Wrong color rectangle position when replacing
		"color" processing rule'

2009-12-29 [colin]	3.7.3cvs46

	* src/compose.c
		Fix bug 2074, 'Remember sending account 
		for sent messages'

2009-12-20 [holger]	3.7.3cvs45

	* src/compose.c
		Delay CREATED_HOOKLIST invokation until
		after the modifications to the compose window
		are done, to allow hooks to further modify the
		window without getting overridden again

2009-12-20 [holger]	3.7.3cvs44

	* src/prefs_toolbar.h
		Fix last commit

2009-12-20 [holger]	3.7.3cvs43

	* src/prefs_toolbar.c
	* src/prefs_toolbar.h
	* src/toolbar.c
		Pass window struct to caller

2009-12-20 [holger]	3.7.3cvs42

	* src/compose.c
	* src/compose.h
		Add hooklist after creation of a compose window

2009-12-19 [holger]	3.7.3cvs41

	* src/prefs_toolbar.c
	* src/prefs_toolbar.h
	* src/toolbar.c
		Allow plugins to choose to which toolbar they want
		to add actions (main window, compose window, or message view)

2009-12-19 [paul]	3.7.3cvs40

	* src/statusbar.c
		fix statusbar in GTK+ 2.19.1

2009-12-10 [pawel]	3.7.3cvs39

	* src/compose.c
		Better fix for cvs28 regression

2009-12-10 [iwkse]	3.7.3cvs38

	* src/compose.c
            Fix some indentation

2009-12-10 [iwkse]	3.7.3cvs37

	* src/compose.c
            Add missing checks for gtkaspell: avoid
            crashing in some cases when Enchant is 
            enabled but the spell checker is disabled 
            in preferences.

2009-12-09 [colin]	3.7.3cvs36

	* src/compose.c
		Fix leak and unchecked accesses.

2009-12-09 [mir]	3.7.3cvs35

	* src/compose.c